# gym-franka-client

./: README.md  pyproject.toml
src/gym_franka/: __init__.py
src/gym_franka/core/: franka_env.py  websocket_client.py
src/gym_franka/reward/: keyboard.py
